fix: remove deprecated new Locale